<resources>
    <string name="app_name">多阅</string>

    <string name="nav_title_setting">设置</string>
    <string name="news_list_activity_label">多阅</string>
    <string name="news_detail_activity_label">新闻</string>
    <string name="keep">收藏</string>
    <string name="keep_news_list_activity_label">收藏新闻</string>

    <string name="cancel_keep_news">取消收藏</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="hint_user_name">用户名</string>
    <string name="hint_password">密码</string>
    <string name="register_activity_label">注册</string>
    <string name="nav_title_keep">我的收藏</string>
    <string name="nav_group_system">系统</string>
    <string name="nav_group_user">用户</string>
    <string name="hint_account">账号</string>


    <string name="test_account">admin</string>
    <string name="test_password">password</string>
    <string name="nav_title_logout">退出登录</string>
    <string name="nav_title_feedback">用户反馈</string>
    <string name="nav_title_update">升级</string>
    <string name="nav_title_about">关于</string>
    <string name="hint_password_repeat">重复密码</string>
    <string name="forget_password">忘记密码？</string>
</resources>
