<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item
            android:title="@string/nav_group_user">
            <menu>
                <item
                    android:id="@+id/keep"
                    android:icon="@mipmap/ic_keep"
                    android:title="@string/nav_title_keep" />

                <item
                    android:id="@+id/logout"
                    android:icon="@mipmap/ic_logout"
                    android:title="@string/nav_title_logout"/>

                <item
                    android:id="@+id/id_feedback"
                    android:icon="@mipmap/ic_feedback"
                    android:title="@string/nav_title_feedback"/>
            </menu>
        </item>

        <item
            android:title="@string/nav_group_system">
            <menu>
                <item
                    android:id="@+id/setting"
                    android:icon="@mipmap/ic_setting"
                    android:title="@string/nav_title_setting" />

                <item android:id="@+id/update"
                    android:icon="@mipmap/ic_update"
                    android:title="@string/nav_title_update"/>

                <item
                    android:id="@+id/about"
                    android:icon="@mipmap/ic_about"
                    android:title="@string/nav_title_about"/>
            </menu>
        </item>
    </group>

</menu>